# calc

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: Expression.h  calc.h
src/: CMakeLists.txt  Expression.cpp  calc.cpp  main.cpp
tst/: CMakeLists.txt  test_calc.cpp
