set(BINARY ${CMAKE_PROJECT_NAME}_tst)

option(BUILD_TESTS "Build the tests" ON)
if (BUILD_TESTS)
    enable_testing()
    file(GLOB TEST_SRC_FILES ${PROJECT_SOURCE_DIR}/tst/*.cpp)
    add_executable(calc_test ${TEST_SRC_FILES})
    target_link_libraries(calc_test ${CMAKE_PROJECT_NAME}_lib gtest gmock gtest_main)
    add_test(UnitTests calc_test)
endif ()